2001-09-13  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (OutputMissingDocumentation): initialize buffer to "".
	Fix for SGI from David Kaelbling <drk@sgi.com>.

Sat Sep  8 14:08:51 2001  Jonathan Blandford  <jrb@webwynk.net>

	* gtkdoc-scan.in (ScanHeader): recognize GET_IFACE macros

2001-09-08  Havoc Pennington  <hp@pobox.com>

	* gtkdoc-mkdb.in (GetArgs): Title the section on object properties 
	"Properties" instead of "Args"

2001-08-14  Laszlo Peter  <laca@ireland.sun.com>

	* gtkdoc-scanobj.in:
	* gtkdoc-scangobj.in: change \n's to \\n's in perl scripts
	generating C code.

2001-08-12  Jens Finke <jens@gnome.org>
	
	* Updated gtk-doc.spec.in file to match gpp standard.

2001-08-04  Damon Chaplin  <damon@ximian.com>

	* Released 0.7

2001-08-04  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (OutputFunction): 
	* gtkdoc-mktmpl.in (OutputDeclaration): patch from Lowell Johnson
	<ldjohn@usgs.gov> to accept things like "long long", "short int",
	"char test[][CLEN]" as function parameters.

2001-07-20  Anders Carlsson  <andersca@gnome.org>

	* gtkdoc-scangobj.in: Remove argument to g_type_init ();

2001-07-09  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (ParseStructDeclaration): accept G_CONST_RETURN
	modifier for function return values. gtkdoc-mktmpl.in already had this.

Thu Jun 21 11:57:16 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-scangobj.in: Conform to changes in GObject API
	for property retrieval.

2001-05-25  Peter Williams  <peterw@ximian.com>

	* gtkdoc-mkdb.in (ScanSourceFile): Skip single-line comments -- 
	prevents barfing on ORBit-generated files.

2001-05-20  Damon Chaplin  <damon@ximian.com>

	* examples/Makefile.am (sgml-build.stamp): replaced use of wildcard
	(which isn't portable) with original *.sgml. I think this just means
	that the first time you try to build the docs it will fail, but if
	you run make again it will work.

	* doc/setting-up.txt: explained that make may fail the first time.
